--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.FoodOrderingApp"
         tools:targetApi="31">
         <activity
-            android:name=".admin.AdminApproveOrderActivity"
+            android:name=".adminActivity.AdminAddFoodDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".admin.AdminHomeActivity"
+            android:name=".adminActivity.AdminApproveOrderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".adminActivity.AdminHomeActivity"
             android:exported="false" />
         <activity
             android:name=".activity.StartActivity"
@@ -46,11 +49,9 @@
         <activity
             android:name=".activity.DetailsActivity"
             android:exported="false" />
-
         <activity
-            android:name= ".ChoosePanelActivity"
+            android:name=".ChoosePanelActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
